# agents

./: .gitignore  README.md  pyproject.toml  test_email_crew.py  test_stock_crew.py
src/helper_agent/: main.py
src/helper_agent/crews/content_crew/: content_crew.py
src/helper_agent/crews/content_crew/config/: agents.yaml  tasks.yaml
src/helper_agent/crews/email_helper/: email_helper.py  models.py
src/helper_agent/crews/email_helper/config/: agents.yaml  tasks.yaml
src/helper_agent/crews/stock_expert/: stock_expert.py
src/helper_agent/crews/stock_expert/config/: agents.yaml  tasks.yaml
src/helper_agent/debug_files/: raw_mail.txt  sorted_mails.txt  summarized_emails.txt
src/helper_agent/tools/: custom_tool.py  fetch_mail.py  search_tool.py
