[project]
name = "helper_agent"
version = "0.1.0"
description = "helper-agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.14.4",
    "ddgs>=9.14.4",
    "email-validator>=2.3.0",
    "google-generativeai>=0.8.6",
    "langchain-community>=0.4.1",
    "langchain-google-community[gmail]>=4.0.0",
    "langchain-huggingface>=1.2.2",
    "litellm>=1.85.1",
    "ollama>=0.6.2",
    "sentence-transformers>=5.5.1",
    "yfinance>=1.4.0",
]

[project.scripts]
kickoff = "helper_agent.main:kickoff"
run_crew = "helper_agent.main:kickoff"
plot = "helper_agent.main:plot"
run_with_trigger = "helper_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
